fix; Remplacement du PolarGrid par un composant custom pour que le spacing corresponde

--- a/src/components/dashboardBody/dashboardActivityRadar/_dashboardActivityRadar.scss
+++ b/src/components/dashboardBody/dashboardActivityRadar/_dashboardActivityRadar.scss
@@ -1,20 +1,73 @@
 .dashboard-activity-radar {
     background-color: $clr-tertiary;
     box-shadow: 0px 2px 4px 0px #00000005;
-
+    position: relative;
     justify-content: center;
     align-items: center;
 
-    &__tick {
+    p {
         font-size: 12px;
         font-weight: 500;
         line-height: 24px;
+        color: #ffffff
     }
 
     .recharts-surface {
         overflow: visible;
     }
 
+    &__ticks {
+        position: absolute;
+        display: flex;
+        justify-content: center;
 
+        &--horizontal {
+            left: 0;
+            width: 100%;
+            height: 17%;
+
+            &--top {
+                top: 0;
+                align-items: flex-end;
+            }
+
+            &--bottom {
+                bottom: 0;
+                align-items: flex-start;
+            }
+        }
+
+        &--vertical {
+            bottom: 0;
+            width: 22%;
+            height: 100%;
+            flex-direction: column;
+
+            &--left {
+                left: 0;
+                align-items: flex-end;
+
+                p {
+                    text-align: end;
+                }
+            }
+
+            &--right {
+                right: 0;
+                align-items: flex-start;
+
+                p {
+                    text-align: left;
+                }
+            }
+
+            &__wrapper {
+                display: flex;
+                flex-direction: column;
+                justify-content: space-between;
+                height: 42%;
+            }
+        }
+    }
 
 }
